--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = ReRe
-version = 0.001
+version = 0.002
 author = Thiago Rondon <thiago@nsms.com.br>
 license = Perl_5
 copyright_holder = Thiago Rondon
@@ -12,6 +12,9 @@ repository.type = git
 
 [ExecDir]
 dir = scripts
+
+[Prereqs]
+Mojolicious::Plugin::BasicAuth = 0.02
 
 [@Basic]
 [MetaJSON]
