--- a/META.yml
+++ b/META.yml
@@ -21,11 +21,14 @@ meta-spec:
 name: ReRe
 requires:
   Config::General: 0
+  Data::Dumper: 0
+  Mojo::UserAgent: 0
   Mojolicious::Lite: 0
   Mojolicious::Plugin::BasicAuth: 0.02
   Moose: 0
   Redis: 0
+  Try::Tiny: 0
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.005
+version: 0.006
