--- a/META.yml
+++ b/META.yml
@@ -26,9 +26,10 @@ requires:
   Mojolicious::Lite: 0
   Mojolicious::Plugin::BasicAuth: 0.02
   Moose: 0
+  Net::CIDR::Lite: 0
   Redis: 0
   Try::Tiny: 0
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.006
+version: 0.007
