--- a/META.yml
+++ b/META.yml
@@ -22,6 +22,7 @@ name: ReRe
 requires:
   Config::General: 0
   Data::Dumper: 0
+  Mojo::JSON: 0
   Mojo::UserAgent: 0
   Mojolicious::Lite: 0
   Mojolicious::Plugin::BasicAuth: 0.02
@@ -32,4 +33,4 @@ requires:
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.007
+version: 0.008
