Import of TBR/ReRe-0.010 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.010
gitpan-cpan-path:         TBR/ReRe-0.010.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = ReRe
-version = 0.009
+version = 0.010
 author = Thiago Rondon <thiago@nsms.com.br>
 license = Perl_5
 copyright_holder = Thiago Rondon
@@ -34,4 +34,6 @@ Mojolicious::Plugin::BasicAuth = 0.05
 [KwaliteeTests]
 [MetaTests]
 [PodSyntaxTests]
+
+[Git::Tag]
 
