--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = ReRe
-version = 0.010
+version = 0.011
 author = Thiago Rondon <thiago@nsms.com.br>
 license = Perl_5
 copyright_holder = Thiago Rondon
@@ -36,4 +36,5 @@ Mojolicious::Plugin::BasicAuth = 0.05
 [PodSyntaxTests]
 
 [Git::Tag]
+[Git::Push]
 
