Import of TBR/ReRe-0.014 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.014
gitpan-cpan-path:         TBR/ReRe-0.014.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ build_requires:
   File::Find: 0
   File::Temp: 0
   FindBin: 0
+  Mojo::IOLoop: 0
   Test::Mock::Redis: 0
   Test::Mojo: 0
   Test::More: 0.88
@@ -33,4 +34,4 @@ requires:
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.013
+version: 0.014
