--- a/META.yml
+++ b/META.yml
@@ -28,10 +28,12 @@ requires:
   Mojolicious::Lite: 0
   Mojolicious::Plugin::BasicAuth: 0.05
   Moose: 0
+  Moose::Role: 0
+  MooseX::Traits: 0
   Net::CIDR::Lite: 0
   Redis: 0
   Try::Tiny: 0
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.014
+version: 0.015
