Import of TBR/ReRe-0.019 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.019
gitpan-cpan-path:         TBR/ReRe-0.019.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,12 +25,14 @@ requires:
   Config::General: 0
   Data::Dumper: 0
   Exporter: 0
+  List::Util: 0
   Mojo::JSON: 0
   Mojo::UserAgent: 0
   Mojolicious::Lite: 0
   Mojolicious::Plugin::BasicAuth: 0.05
   Moose: 0
   Moose::Role: 0
+  MooseX::SimpleConfig: 0
   MooseX::Traits: 0
   Net::CIDR::Lite: 0
   Redis: 0
@@ -39,4 +41,4 @@ requires:
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.018
+version: 0.019
