--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   File::Temp: 0
   FindBin: 0
   Mojo::IOLoop: 0
+  POSIX: 0
   Test::Exception: 0
   Test::Mock::Redis: 0
   Test::Mojo: 0
@@ -22,7 +23,6 @@ meta-spec:
   version: 1.4
 name: ReRe
 requires:
-  Config::General: 0
   Data::Dumper: 0
   Exporter: 0
   List::Util: 0
@@ -41,4 +41,4 @@ requires:
 resources:
   bugtracker: http://github.com/maluco/ReRe/issues
   repository: git://github.com/maluco/ReRe.git
-version: 0.019
+version: 0.020
