--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = ReRe
-version = 0.019
+version = 0.020
 author = Thiago Rondon <thiago@nsms.com.br>
 license = Perl_5
 copyright_holder = Thiago Rondon
@@ -19,6 +19,8 @@ Mojolicious::Plugin::BasicAuth = 0.05
 [@Basic]
 [MetaJSON]
 [ReadmeFromPod]
+[InstallGuide]
+[GitFmtChanges]
 
 [OurPkgVersion]
 [PodWeaver]
